@@ -1,0 +1,4 @@
+# Configuration for splitting kana
+normalize = yes
+header:katakana = katakana
+header:hiragana = hiragana
