@@ -7,7 +7,8 @@ tab-separated text dictionary files compatible with FCardSaver.
 
 Prerequisites for running the tools are:
 
-   - Perl 5 or higher.
+   - Perl 5 or higher with installed modules "Unicode::Normalize" and
+     "Text::CSV_XS".
    - xsltproc tool from LibXSLT library, supporting EXSLT extensions
      <http://exslt.org/strings> and <http://exslt.org/functions>.
 
