@@ -1,0 +1,2 @@
+# Configuration for splitting kanjidic2
+filename = kanjidic2-%3$s.tsv
